--- a/index.html
+++ b/index.html
@@ -12,19 +12,12 @@
 
   <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-
 </head>
 
 <body>
-  <div class="image">
-    <img src="images/pattern-background-desktop.svg" alt="bg" class="bg">
-  </div>
-  <div class="main">
+  <img src="images/pattern-background-desktop.svg" alt="bg" class="bg">
     <div class="holder">
-      <div class="header">
         <img src="images/illustration-hero.svg" alt="" class="icon">
-      </div>
       <div class="middle">
         <h1>Order Summary</h1>
         <p>
@@ -46,15 +39,10 @@
         <button type="button" name="button" class="cancel">Cancel Order</button>
       </div>
     </div>
-    <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Eslam Ismail</a>.
-    </div>
-  </div>
-
-
-
-
-</body>
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+      Coded by <a target="_blank" href="https://www.frontendmentor.io/profile/eslam-94">Eslam Ismail</a>
+    </footer>
+  </body>
 
 </html>
